--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "url": "https://github.com/Exabyte-io/eslint-config-mat3ra.git"
     },
     "main": "index.js",
-    "files": [
-        "index.js",
+    "files": [    "index.js",
         ".babelrc"
     ],
     "author": "Exabyte Inc.",
@@ -49,6 +48,12 @@
         "prettier": "^2.7.1"
     },
     "peerDependencies": {
+        "@babel/eslint-parser": "7.16.3",
+        "@babel/plugin-proposal-class-properties": "7.16.0",
+        "@babel/preset-env": "7.16.4",
+        "@babel/preset-react": "7.16.7",
+        "@babel/register": "^7.16.0",
+        "@babel/runtime-corejs3": "7.16.8",
         "eslint": "7.32.0",
         "eslint-config-airbnb": "19.0.2",
         "eslint-config-prettier": "8.3.0",
