--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "description": "Eslint configuration extension to be reused across all mat3ra projects.",
     "scripts": {
+        "test": "npm run lint",
         "lint": "eslint index.js && prettier --write index.js",
         "lint:fix": "eslint --fix --cache index.js && prettier --write index.js",
         "prettier": "prettier --check index.js",
