--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@exabyte-io/eslint-config-mat3ra",
+    "name": "@exabyte-io/eslint-config",
     "version": "1.0.0",
-    "description": "Eslint configuration extension to be reused across all mat3ra projects.",
+    "description": "Eslint configuration extension to be reused across mat3ra projects.",
     "scripts": {
         "test": "npm run lint",
         "lint": "eslint index.js && prettier --write index.js",
@@ -11,7 +11,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Exabyte-io/eslint-config-mat3ra.git"
+        "url": "https://github.com/Exabyte-io/eslint-config.git"
     },
     "main": "index.js",
     "files": [
