--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,8 +36,14 @@
         "arrow-body-style": "off",
         "import/prefer-default-export": "off",
         "import/no-named-as-default-member": "warn",
+        "import/extensions": "off",
         "no-param-reassign": ["warn", { "props": false }],
         "max-classes-per-file": "warn",
+        "react/jsx-filename-extension": "off",
+        "react/forbid-prop-types": "off",
+        "react/button-has-type": "off",
+        "react/function-component-definition": [2, { "namedComponents": "function-declaration" }],
+        "mui-path-imports/mui-path-imports": "error",
         "simple-import-sort/imports": [
             "warn",
             {
