--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
         "@babel/preset-react": "7.16.7",
         "@babel/register": "^7.16.0",
         "@babel/runtime-corejs3": "7.16.8",
-        "@typescript-eslint/parser": "^5.56.0",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
-        "eslint": "7.32.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "eslint": "^7.32.0",
         "eslint-config-airbnb": "19.0.2",
         "eslint-config-prettier": "^8.5.0",
         "eslint-import-resolver-exports": "^1.0.0-beta.2",
@@ -43,6 +43,7 @@
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsdoc": "37.1.0",
         "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-mui-path-imports": "0.0.15",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.30.0",
         "eslint-plugin-simple-import-sort": "7.0.0",
@@ -70,6 +71,7 @@
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsdoc": "37.1.0",
         "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-mui-path-imports": "0.0.15",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.30.0",
         "eslint-plugin-simple-import-sort": "7.0.0"
