--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "eslint-import-resolver-exports": "^1.0.0-beta.2",
         "eslint-import-resolver-meteor": "^0.4.0",
         "eslint-import-resolver-node": "^0.3.6",
+        "eslint-import-resolver-typescript": "^3.6.0",
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsdoc": "37.1.0",
         "eslint-plugin-jsx-a11y": "6.5.1",
@@ -51,7 +52,8 @@
         "lint-staged": "^12.1.2",
         "mocha": "^9.1.3",
         "nyc": "^15.1.0",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "^5.0.2"
     },
     "peerDependencies": {
         "@babel/eslint-parser": "7.16.3",
