--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "typescript": "^5.0.2"
     },
     "peerDependencies": {
-        "@babel/eslint-parser": "7.16.3",
+        "@babel/eslint-parser": "^7.16.3",
         "@babel/plugin-proposal-class-properties": "7.16.0",
         "@babel/preset-env": "7.16.4",
         "@babel/preset-react": "7.16.7",
