--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "homepage": "https://github.com/Exabyte-io/eslint-config",
     "devDependencies": {
         "@babel/eslint-parser": "7.16.3",
-        "@babel/plugin-proposal-class-properties": "7.16.0",
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
         "@babel/preset-env": "7.16.4",
         "@babel/preset-react": "7.16.7",
         "@babel/register": "^7.16.0",
@@ -57,7 +57,7 @@
     },
     "peerDependencies": {
         "@babel/eslint-parser": "^7.16.3",
-        "@babel/plugin-proposal-class-properties": "7.16.0",
+        "@babel/plugin-proposal-class-properties": "^7.16.0",
         "@babel/preset-env": "7.16.4",
         "@babel/preset-react": "7.16.7",
         "@babel/register": "^7.16.0",
