--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "devDependencies": {
         "@babel/eslint-parser": "7.16.3",
         "@babel/plugin-proposal-class-properties": "^7.16.0",
-        "@babel/preset-env": "7.16.4",
+        "@babel/preset-env": "^7.16.4",
         "@babel/preset-react": "7.16.7",
         "@babel/register": "^7.16.0",
         "@babel/runtime-corejs3": "7.16.8",
@@ -58,7 +58,7 @@
     "peerDependencies": {
         "@babel/eslint-parser": "^7.16.3",
         "@babel/plugin-proposal-class-properties": "^7.16.0",
-        "@babel/preset-env": "7.16.4",
+        "@babel/preset-env": "^7.16.4",
         "@babel/preset-react": "7.16.7",
         "@babel/register": "^7.16.0",
         "@babel/runtime-corejs3": "7.16.8",
