--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@babel/eslint-parser": "7.16.3",
         "@babel/plugin-proposal-class-properties": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
-        "@babel/preset-react": "7.16.7",
+        "@babel/preset-react": "^7.16.7",
         "@babel/register": "^7.16.0",
         "@babel/runtime-corejs3": "7.16.8",
         "@typescript-eslint/eslint-plugin": "^5.56.0",
@@ -59,7 +59,7 @@
         "@babel/eslint-parser": "^7.16.3",
         "@babel/plugin-proposal-class-properties": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
-        "@babel/preset-react": "7.16.7",
+        "@babel/preset-react": "^7.16.7",
         "@babel/register": "^7.16.0",
         "@babel/runtime-corejs3": "7.16.8",
         "@typescript-eslint/parser": "^5.56.0",
