--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Eslint configuration extension to be reused across mat3ra projects.",
     "scripts": {
         "test": "npm run lint",
-        "lint": "eslint index.js && prettier --write index.js",
-        "lint:fix": "eslint --fix --cache index.js && prettier --write index.js",
-        "prettier": "prettier --check index.js",
+        "lint": "eslint . && prettier --write .",
+        "lint:fix": "eslint --fix --cache . && prettier --write .",
+        "prettier": "prettier --check .",
         "prepare": "husky install"
     },
     "repository": {
@@ -14,8 +14,14 @@
         "url": "https://github.com/Exabyte-io/eslint-config.git"
     },
     "main": "index.js",
+    "exports": {
+        ".": "./index.js",
+        "./json": "./eslint_config/json.json"
+    },
     "files": [
         "index.js",
+        "eslint_config/base.json",
+        "eslint_config/json.json",
         ".babelrc",
         ".prettierrc"
     ],
@@ -44,11 +50,13 @@
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsdoc": "^50.6.0",
         "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-jsonc": "^2.12.0",
         "eslint-plugin-mui-path-imports": "0.0.15",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.30.0",
         "eslint-plugin-simple-import-sort": "7.0.0",
         "husky": "^7.0.4",
+        "jsonc-eslint-parser": "^2.1.0",
         "lint-staged": "^12.1.2",
         "mocha": "^9.1.3",
         "nyc": "^15.1.0",
@@ -73,10 +81,12 @@
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsdoc": "^50.6.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-jsonc": "^2.12.0",
         "eslint-plugin-mui-path-imports": "^0.0.15",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.0",
-        "eslint-plugin-simple-import-sort": "^7.0.0"
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "jsonc-eslint-parser": "^2.1.0"
     },
     "engines": {
         "node": ">=12.0.0"
