--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
         "eslint-import-resolver-meteor": "^0.4.0",
         "eslint-import-resolver-node": "^0.3.6",
         "eslint-plugin-import": "^2.25.3",
-        "eslint-plugin-jsdoc": "^50.6.0",
+        "eslint-plugin-jsdoc": "^37.1.0 || ^50.6.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-jsonc": "^2.12.0",
         "eslint-plugin-mui-path-imports": "^0.0.15",
